--- a/Tests/Sponsors/sponsors_style.css
+++ b/Tests/Sponsors/sponsors_style.css
@@ -27,7 +27,7 @@
     flex-direction: row;
     left:15%;
     top:10%;    
-    background: linear-gradient(105.96deg, rgba(0, 0, 0, 0.8) 1.5%, rgba(196, 196, 196, 0) 100%);
+    background: linear-gradient(105deg, rgba(0,0,33,1) 0%, rgba(2,0,36,0.7934524151457458) 100%, rgba(0,212,255,1) 100%);
     /* background: #000021; */
     border: 0.5px solid #FFFFFF;
     box-sizing: border-box;
@@ -112,7 +112,7 @@
     }
 }
 #toBeBlur.blur{
-    filter: blur(10px);
+    filter: blur(25px);
     user-select: none;
     pointer-events: none;
 }
